# single-ev-droplet-calculator

./: .gitignore  CITATION.cff  GITHUB_PUBLISH_CHECKLIST.md  LICENSE  README.md  index.html  pyproject.toml
examples/: example_inputs.json  interactive_calculator.ipynb
scripts/: reproduce_anchor_table.py
single_ev_droplet_calculator/: __init__.py  cli.py  core.py
tests/: test_core.py
validation/: cli_compare_0.1_0.2.txt  cli_plan_1000_at_0.1.txt  cli_summary_lambda0.1.txt  unittest_output.txt  validation_run_info.txt
