[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single-ev-droplet-calculator"
version = "0.1.0"
description = "Poisson occupancy and planning calculator for single-EV droplet assays"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Single-EV Review Team" }
]
keywords = [
  "extracellular vesicle",
  "exosome",
  "droplet microfluidics",
  "poisson occupancy",
  "digital assay",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
evdroplet = "single_ev_droplet_calculator.cli:main"

[tool.setuptools]
packages = ["single_ev_droplet_calculator"]

